fixed padding, margin on menu-container so it doesn't overlap the info

--- a/src/App.css
+++ b/src/App.css
@@ -205,6 +205,8 @@
 	.menu-container {
 		display: flex;
 		flex-direction: column;
+		padding: 30px;
+		margin: 30px;
 	}
 	.menu-list-title {
 		align-self: center;
